# LibFoo

./: CMakeLists.txt  README.md
cmake/: FooLibConfig.cmake.in  git_info.cmake  version.cpp.in
include/: foo.hpp  version.hpp
src/: foo.cpp
